--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@twilio/voice-sdk": "2.0.1",
+    "util": "^0.12.4",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "react-scripts start",
